Fix barely visible text in disabled text inputs

--- a/src/common/stylesheets/components/_modal-popup.scss
+++ b/src/common/stylesheets/components/_modal-popup.scss
@@ -133,7 +133,7 @@
 		height: 22px;
 
 		&:disabled {
-			color: var(--fill-quinary);
+			color: var(--fill-tertiary);
 		}
 	}
 
